@@ -3102,6 +3102,7 @@ select[data-dkcacheid] {
 }
 .grid-list .type-cta {
   background: #00b2ce;
+  cursor: pointer;
 }
 .grid-list .type-cta .elm-content {
   bottom: 0;
@@ -3127,6 +3128,13 @@ select[data-dkcacheid] {
   line-height: 24px;
   line-height: 1.6rem;
   weight: 300;
+}
+@media (min-width: 0) and (max-width: 45em) {
+  .grid-list .type-cta {
+    margin-left: -2rem;
+    margin-right: -2rem;
+    padding: 2rem;
+  }
 }
 @media (min-width: 55em) {
   .grid-list .type-cta h2, .grid-list .type-cta .article-full .main-content h1, .article-full .main-content .grid-list .type-cta h1 {
@@ -3261,6 +3269,7 @@ header#page-header .brand-secondary span {
   .hero .elm-content {
     position: absolute;
     top: 10%;
+    max-width: 60%;
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.2), 0 0 30px rgba(0, 0, 0, 0.9);
   }
   .hero .elm-content h1,
@@ -4136,12 +4145,19 @@ html, body {
   text-align: left;
   background-repeat: no-repeat;
   background-position: 50% 0;
-  padding-top: 0.8rem;
+  padding-top: 0;
   padding-bottom: 1.6rem;
 }
+.article-header .content-block {
+  overflow: visible;
+}
+.article-header .content-block .elm-image {
+  margin-left: -2rem;
+  margin-right: -2rem;
+}
 .article-header .content-block .elm-image img {
-  max-width: none;
-  opacity: 0;
+  width: 100%;
+  opacity: 1;
 }
 .article-header .content-block .elm-content h1 {
   font-size: 50px;
@@ -4156,6 +4172,11 @@ html, body {
   line-height: 1.6rem;
   color: #00b2ce;
   font-weight: 300;
+}
+@media (min-width: 0) and (max-width: 45em) {
+  .article-header {
+    background-image: none !important;
+  }
 }
 
 .type-article {
@@ -4234,9 +4255,6 @@ html, body {
   
   	*/
 }
-.type-article .article-header {
-  background-color: #f5f5f5;
-}
 .type-article .main-content {
   max-width: 696px;
   margin-left: auto;
@@ -4278,6 +4296,9 @@ html, body {
   clear: none;
   display: inline;
 }
+.type-article .article-header {
+  background-color: #f5f5f5;
+}
 @media (min-width: 45em) {
   .type-article .article-header {
     padding-top: 0;
@@ -4286,6 +4307,7 @@ html, body {
   }
   .type-article .article-header .content-block {
     position: relative;
+    overflow: hidden;
     margin-top: 3.2rem;
     margin-bottom: 3.2rem;
   }
@@ -4313,6 +4335,7 @@ html, body {
     top: 0;
     left: 50%;
     height: 100%;
+    width: auto;
     -webkit-transform: translate(-50%, 0);
         -ms-transform: translate(-50%, 0);
             transform: translate(-50%, 0);
@@ -4417,11 +4440,6 @@ html, body {
 .type-product .article-header-3d .content-block .elm-actions a {
   font-family: "HelveticaNeueW01", Helvetica, arial, sans-serif;
   font-weight: 300;
-}
-@media (min-width: 0) and (max-width: 45em) {
-  .type-product .article-header {
-    background: none !important;
-  }
 }
 @media (min-width: 45em) {
   .type-product .article-header {
@@ -4864,6 +4882,12 @@ html, body {
     margin-left: 0;
     margin-right: 0;
     clear: none;
+  }
+}
+
+@media (min-width: 0) and (max-width: 45em) {
+  .page-section .form-signup-cta {
+    display: none;
   }
 }
 
