@@ -113,7 +113,7 @@
 			width: 100%;
 			height: 100%;
 			margin:0;
-			
+
 			img {
 				position:absolute;
 				left: 0;
@@ -347,6 +347,7 @@
 
 	.type-cta {
 		background: $color-primary;
+		cursor: pointer;
 		
 		.elm-content {
 			bottom:0;
@@ -370,8 +371,13 @@
 				weight: $light;
 			}
 		}
-
+		@include breakpoint(0 $sm) {
+			margin-left: -$content-margin;
+			margin-right: -$content-margin;
+			padding: $content-margin;
+		}
 		@include breakpoint($md, true) {
+
 			h2 {
 				@include adjust-font-size-to($size-xxl);
 			}
