@@ -57,6 +57,7 @@
 		.elm-content {
 			position:absolute;
 			top: 10%;
+			max-width: 60%;
 			text-shadow: 0 0 5px rgba(255,255,255,.2), 0 0 30px rgba(0,0,0,.9);
 
 			
