@@ -1,4 +1,4 @@
-<section class="hero" style="background-image:url('http://lorempixel.com/1280/395/people/1/')">
+<div class="hero" style="background-image:url('http://lorempixel.com/1280/395/people/1/')">
 
 	<div class="content-wrapper">
 		<div class="elm-image">
@@ -15,7 +15,7 @@
 
 	</div>
 
-</section>
+</div>
 
 {{#if show_hero_signup}}
 	{{>form_signup_step1_hero}}
