@@ -253,7 +253,7 @@
         </div>
       </div>
     </header>
-    <section class="hero" style="background-image:url('http://lorempixel.com/1280/395/people/1/')">
+    <div class="hero" style="background-image:url('http://lorempixel.com/1280/395/people/1/')">
       <div class="content-wrapper">
         <div class="elm-image">
           <img src="http://lorempixel.com/1280/395/people/1/" alt="Image text" border="0">
@@ -268,7 +268,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
     <div class="solution-category" style="background-image:url(http://lorempixel.com/1280/395/nature/1/)">
       <div class="content-wrapper">
         <div class="elm-image">
